Add Finnish-only content handling in LanguageSwitcher component. Implement localized "not available" messages in English, Finnish, and Swedish for unsupported paths. Enhance user experience by guiding users to switch languages or return home.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -272,6 +272,12 @@
   },
   "common": {
     "tryFree": "Try Työvuorolista for free"
+  },
+  "notAvailable": {
+    "title": "Content not available",
+    "heading": "This content is not yet translated",
+    "description": "Unfortunately this page is not yet available in English. You can return to the home page or switch language.",
+    "backToHome": "Back to home page"
   }
 }
 
