Add localized 404 error handling in English, Finnish, and Swedish. Update Layout.astro to include canonical URL generation and improve meta tags for better SEO. Set HTTP status code for unavailable content in respective language pages.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -278,6 +278,12 @@
     "heading": "This content is not yet translated",
     "description": "Unfortunately this page is not yet available in English. You can return to the home page or switch language.",
     "backToHome": "Back to home page"
+  },
+  "notFound": {
+    "title": "Page not found - 404",
+    "heading": "Page not found",
+    "description": "Sorry, the page you're looking for could not be found. It may have been moved or deleted.",
+    "backToHome": "Back to home page"
   }
 }
 
